[package]
name = "first-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhowはエラー処理を扱いやすくするクレート
anyhow = "1.0.65" 
wasm-workers-rs = { git = "https://github.com/vmware-labs/wasm-workers-server/" }
